tests/errors/semantics/invalid_arith_on_rhs.odl
main :: () -> void  {
    x := false;
    1 + x;
};